[package]
name = "pxls-board-getter-rust"
version = "0.2.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.2.0"
clap = { version = "3.2.16", features = ["derive"] }
png = "0.17.5"
reqwest = { version = "0.11.11", features = ["json"] }
serde = { version = "1.0.140", features = ["derive"] }
tokio = { version = "1.20.1", features = ["full"] }

[profile.release]
strip = true
